--- a/provisioning/datasources/datasources.yml
+++ b/provisioning/datasources/datasources.yml
@@ -9,6 +9,9 @@ datasources:
     version: 1
     editable: true
     jsonData:
-      path: '/resources'
+      hostname: 'prtg.example'
+      username: 'prtg-username'
+      cacheTimeout: 300
+      maxDataPoints: 100
     secureJsonData:
-      apiKey: 'api-key'
+      passhash: 'prtg-passhash'
