--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,12 @@
-# This GitHub Action automates the process of building Grafana plugins.
-# (For more information, see https://github.com/grafana/plugin-actions/blob/main/build-plugin/README.md)
+# Automatically builds and releases a Grafana plugin
+# For more information: https://github.com/grafana/plugin-actions/blob/main/build-plugin/README.md
+
 name: Release
 
 on:
   push:
     tags:
-      - 'v*' # Run workflow on version tags, e.g. v1.0.0.
+      - 'v*' # Runs only on version tags (e.g., v1.0.0).
 
 permissions: read-all
 
@@ -13,14 +14,25 @@ jobs:
   release:
     permissions:
       contents: write
+      id-token: write  # Required permissions for provenance attestation
+      attestations: write
+
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: grafana/plugin-actions/build-plugin@main
-        # Uncomment to enable plugin signing
-        # (For more info on how to generate the access policy token see https://grafana.com/developers/plugin-tools/publish-a-plugin/sign-a-plugin#generate-an-access-policy-token)
-        #with:
-        # Make sure to save the token in your repository secrets
-        #policy_token: $
-        # Usage of GRAFANA_API_KEY is deprecated, prefer `policy_token` option above
-        #grafana_token: $
+      - name: 🛎️ Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: 🔧 Build Grafana Plugin
+        uses: grafana/plugin-actions/build-plugin@main
+        with:
+          # 🚀 Access Policy Token required for signing the plugin
+          # Make sure to add this token in your repository secrets!
+          policy_token: ${{ secrets.GRAFANA_ACCESS_POLICY_TOKEN }}
+          attestation: true  # Enable provenance attestation
+
+      - name: 📦 Create Release Zip File
+        uses: softprops/action-gh-release@v1
+        with:
+          files: "dist/*.zip"  # Adds the built plugin zip file to the release
+          generate_release_notes: true
